# VisualNovel-SFML

.github/workflows/: build.yml
sfml-visual-novel/: CMakeLists.txt  README.md
sfml-visual-novel/.cache/clangd/index/: Animation.cpp.B011D3620F72592F.idx  Animation.hpp.4E4A807D74D1959D.idx  Button.cpp.9F920A0CCA9772D4.idx  Button.hpp.70FF92F60AEEEB3F.idx  CharacterImage.cpp.5948CAD5423E3662.idx  CharacterImage.hpp.8FB83384F7AE44C7.idx  ChoiceUI.cpp.5D2C12A271B36A2F.idx  ChoiceUI.hpp.61D8BFDC910B9DF6.idx  DialogueBox.cpp.04D8677FA20AF9D4.idx  DialogueBox.hpp.54433BAFE87E8868.idx  GameScene.cpp.EDB23F10933FBDFF.idx  GameScene.hpp.845B864AA2AC5BFC.idx  MainMenuScene.cpp.4AA3623F8AB86660.idx  MainMenuScene.hpp.D4B8C8220E29B633.idx  PauseMenu.cpp.0B806EA773166F45.idx  PauseMenu.hpp.5C05C1BA8B50495B.idx  ResourceManager.cpp.89D6C4976B3740BF.idx  ResourceManager.hpp.7FEB1DA78C9C315C.idx  main.cpp.87705DCD81004BDD.idx
sfml-visual-novel/assets/: fonts
sfml-visual-novel/assets/dialogues/: sample_dialogue.yml
sfml-visual-novel/src/: main.cpp
sfml-visual-novel/src/scenes/: GameScene.cpp  GameScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  PauseMenu.cpp  PauseMenu.hpp  Scene.hpp
sfml-visual-novel/src/ui/: Button.cpp  Button.hpp  CharacterImage.cpp  CharacterImage.hpp  ChoiceUI.cpp  ChoiceUI.hpp  DialogueBox.cpp  DialogueBox.hpp
sfml-visual-novel/src/utils/: DialogueManager.cpp  DialogueManager.hpp  ResourceManager.cpp  ResourceManager.hpp
